--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,42 @@
 .Side {
   position: fixed;
   width: 240px;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  background-color: #222;
-  padding-top: 20px;
-  overflow-y: auto;
-  }
-  
-  .Side a {
-  display: block;
-  color: #fff;
-  font-size: 18px;
-  padding: 10px 20px;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  transition: all 0.3s ease;
-  }
-  
-  .Side a:hover {
-  background-color: #333;
-  color: #fff;
-  }
-  
-  .Main {
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  background-color: rgb(29, 35, 39);
+}
+.Main {
   height: 100%;
   display: flex;
+  -moz-box-pack: center;
   justify-content: center;
+  -moz-box-align: center;
   align-items: center;
-  }
-  
-  body {
-  margin: 0;
+}
+body {
+  margin: 0px;
   font-size: 16px;
-  color: #fff;
-  background-color: #333;
+  color: white;
+  background-color: rgb(44, 51, 56);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
-  }
+}
+
+/*je veux des jolie boutons*/
+button {
+  border: none;
+  background-color: rgb(29, 35, 39);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 5px;
+}
+
+/*stylise les links*/
+a {
+  color: white;
+  text-decoration: none;
+}
